# orizentic

./: .gitignore  CONTRIBUTORS  LICENSE  capabilities.cabal  capabilities.nix  orizentic.cabal  readme.md
.circleci/: config.yml
app/: CapDb.hs  Orizentic.hs
go/: Gopkg.toml  readme.md
go/cli/: main.go
go/orizentic/: orizentic.go  orizentic_suite_test.go  orizentic_test.go  parser.go  parser_test.go  tokens.go  types.go
haskell/: default.nix  orizentic.cabal  readme.md  shell.nix  stack.yaml
haskell/app/: Orizentic.hs
haskell/src/LuminescentDreams/: Orizentic.hs
haskell/test/: UnitSpec.hs
rust/: Cargo.nix  Cargo.toml  build.rs  crates-io.list  crates-io.nix  default.nix  readme.md  shell.nix
rust/nixpkgs/: rust-1.33.nix
rust/src/: bin.rs  core.rs  filedb.rs  lib.rs
rust/tests/: integration_test.rs
src/LuminescentDreams/: Capabilities.hs
test/: UnitSpec.hs
