[package]
name = "orizentic"
version = "0.1.0"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]

[dependencies]
yaml-rust = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "4"
serde_derive = "1"
serde = "1"
uuid = { version = "0.6.5", features = ["v4"] }

[badges]
circle-ci = { repository = "luminescent-dreams/orizentic", branch = "sol" }

[lib]
name = "orizentic"
path = "src/lib.rs"

[[bin]]
name = "orizentic"
path = "src/bin.rs"

